backend/startup_error.log
file:///home/jrilym/Projects/Next/fermion-roastery/backend/routes/adminRoutes.js:6
  deletePartner,
  ^^^^^^^^^^^^^
SyntaxError: The requested module '../controllers/adminController.js' does not provide an export named 'deletePartner'
    at #asyncInstantiate (node:internal/modules/esm/module_job:327:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:431:5)
    at async node:internal/modules/esm/loader:666:26
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v26.2.0
